Fix the JNI Maven conf.
Signed-off-by: Ulrich VACHON <uvachon@gmail.com>